--- a/LeetCode/1031-1040/1032. 字符流（困难）.md
+++ b/LeetCode/1031-1040/1032. 字符流（困难）.md
@@ -61,7 +61,7 @@ streamChecker.query("l"); // 返回 True ，因为 'kl' 在 words 中
 
 > 一些细节：为了避免每个样例都 `new` 大数组，我们可以使用 `static` 优化。
 
-代码：
+Java 代码：
 ```Java
 class StreamChecker {
     static int N = 2010 * 200, idx = 0;
@@ -104,6 +104,48 @@ class StreamChecker {
     }
 }
 ```
+C++ 代码：
+```C++
+class StreamChecker {
+public:
+    static const int N = 2010 * 200;
+    int tr[N][26];
+    bool isEnd[N];
+    string sb;
+    int idx = 0;
+    void add(const string &s) {
+        int p = 0;
+        for (char c : s) {
+            int u = c - 'a';
+            if (tr[p][u] == 0) tr[p][u] = ++idx;
+            p = tr[p][u];
+        }
+        isEnd[p] = true;
+    }
+    bool query(int start, int end) {
+        int p = 0;
+        for (int i = start; i <= end; i++) {
+            int u = sb[i] - 'a';
+            if (tr[p][u] == 0) return false;
+            p = tr[p][u];
+        }
+        return isEnd[p];
+    }
+    StreamChecker(const vector<string>& words) {
+        memset(tr, 0, sizeof(tr));
+        memset(isEnd, 0, sizeof(isEnd));
+        for (const string &s : words) add(s);
+    }
+    bool query(char c) {
+        sb.push_back(c);
+        int n = sb.length(), min = max(0, n - 200);
+        for (int i = n - 1; i >= min; i--) {
+            if (query(i, n - 1)) return true;
+        }
+        return false;
+    }
+};
+```
 * 时间复杂度：`StreamChecker` 初始化复杂度为 $O(n)$，其中 $n$ 为 `words` 字符总数；`query` 操作复杂度为 $O(m^2)$，其中 $m = 200$ 为最大 `words[i]` 长度
 * 空间复杂度：$O(n \times C)$，其中 $n$ 为 `words` 字符总数，$C = 26$ 为字符集大小
 
@@ -123,7 +165,7 @@ class StreamChecker {
 
 同理，我们可以利用最大的 `words[i]` 长度为 $200$ 来控制从 $s[n - 1]$ 开始往回找的最远距离，同时利用当某个短后缀不在 `Trie` 中，则其余长度更大的后缀必然不在 `Trie` 中进行剪枝操作。
 
-代码：
+Java 代码：
 ```Java 
 class StreamChecker {
     static int N = 2010 * 200, idx = 0;
@@ -159,6 +201,47 @@ class StreamChecker {
         return isEnd[p];
     }
 }
+```
+C++ 代码：
+```C++
+class StreamChecker {
+public:
+    static const int N = 2010 * 200;
+    static const int ALPHABET_SIZE = 26;
+    vector<vector<int>> tr;
+    vector<bool> isEnd;
+    string sb;
+    int idx = 0;
+    void add(const string &s) {
+        int p = 0;
+        for (int i = s.length() - 1; i >= 0; i--) {
+            int u = s[i] - 'a';
+            if (tr[p].size() <= u) tr[p].resize(u + 1, 0);
+            if (tr[p][u] == 0) tr[p][u] = ++idx;
+            p = tr[p][u];
+        }
+        isEnd[p] = true;
+    }
+    StreamChecker(const vector<string>& words) {
+        tr.resize(N);
+        isEnd.resize(N);
+        fill(isEnd.begin(), isEnd.end(), false);
+        for (const auto &s : words) {
+            add(s);
+        }
+    }
+    bool query(char c) {
+        sb.push_back(c);
+        int n = sb.length(), min = max(0, n - 200), p = 0;
+        for (int i = n - 1; i >= min; i--) {
+            if (isEnd[p]) return true;
+            int u = sb[i] - 'a';
+            if (tr[p].size() <= u || tr[p][u] == 0) return false;
+            p = tr[p][u];
+        }
+        return isEnd[p];
+    }
+};
 ```
 * 时间复杂度：`StreamChecker` 初始化复杂度为 $O(n)$，其中 $n$ 为 `words` 字符总数；`query` 操作复杂度为 $O(m)$，其中 $m = 200$ 为最大 `words[i]` 长度
 * 空间复杂度：$O(n \times C)$，其中 $n$ 为 `words` 字符总数，$C = 26$ 为字符集大小
