--- a/LeetCode/1221-1230/1129. 颜色交替的最短路径（中等）.md
+++ b/LeetCode/1221-1230/1129. 颜色交替的最短路径（中等）.md
@@ -6,11 +6,17 @@ Tag : 「BFS」、「最短路」
 
 
 
-在一个有向图中，节点分别标记为 `0, 1, ..., n-1`。图中每条边为红色或者蓝色，且存在自环或平行边。
+在一个有向图中，节点分别标记为 `0, 1, ..., n-1`。
 
-`red_edges` 中的每一个 `[i, j]` 对表示从节点 `i` 到节点 `j` 的红色有向边。类似地，`blue_edges` 中的每一个 `[i, j]` 对表示从节点 `i` 到节点 `j` 的蓝色有向边。
+图中每条边为红色或者蓝色，且存在自环或平行边。
 
-返回长度为 `n` 的数组 `answer`，其中 `answer[X]` 是从节点 `0` 到节点 `X` 的红色边和蓝色边交替出现的最短路径的长度。如果不存在这样的路径，那么 `answer[x] = -1`。
+`red_edges` 中的每一个 `[i, j]` 对表示从节点 `i` 到节点 `j` 的红色有向边。
+
+类似地，`blue_edges` 中的每一个 `[i, j]` 对表示从节点 `i` 到节点 `j` 的蓝色有向边。
+
+返回长度为 `n` 的数组 `answer`，其中 `answer[X]` 是从节点 `0` 到节点 `X` 的红色边和蓝色边交替出现的最短路径的长度。
+
+如果不存在这样的路径，那么 `answer[x] = -1`。
 
 示例 1：
 ```
@@ -70,7 +76,7 @@ Tag : 「BFS」、「最短路」
 
 利用数据范围不大（点数为 $100$，边数为 $800$），可以直接对每个点进行一次独立的 `BFS`  来求最短路。由于图存在重边和自环，因此在求解最短路的过程需要对边进行去重。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     static int N = 110, M = 810, idx = 0;
@@ -115,6 +121,54 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int he[110], e[810], ne[810], w[810], idx = 0;
+    void add(int a, int b, int c) {
+        e[idx] = b;
+        w[idx] = c;
+        ne[idx] = he[a];
+        he[a] = idx++;
+    }
+    vector<int> shortestAlternatingPaths(int n, vector<vector<int>>& rs, vector<vector<int>>& bs) {
+        idx = 0;
+        fill(he, he + n, -1);
+        for (auto& e : rs) add(e[0], e[1], 1);
+        for (auto& e : bs) add(e[0], e[1], -1);
+        vector<int> ans(n);
+        vector<bool> vis(rs.size() + bs.size());
+        for (int k = 1; k < n; k++) {
+            ans[k] = -1;
+            fill(vis.begin(), vis.end(), false);
+            queue<vector<int>> q;
+            q.push({ 0, 0, 0 }); // point, last, step
+            bool out = false;
+            while (!q.empty()) {
+                if (out) break;
+                vector<int> info = q.front(); q.pop();
+                int p = info[0], last = info[1], step = info[2];
+                for (int i = he[p]; i != -1; i = ne[i]) {
+                    int j = e[i], c = w[i];
+                    if (vis[i]) continue;
+                    if (c + last == 0 || last == 0) {
+                        if (j == k) {
+                            ans[k] = step + 1;
+                            out = true;
+                            break;
+                        } else {
+                            q.push({ j, c, step + 1 });
+                            vis[i] = true;
+                        }
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
 * 时间复杂度：将点数记为 `n` ，边数记为 `m`。建图复杂度为 $O(m)$；构造答案复杂度为 $O(n \times (n + m))$。整体复杂度为 $O(n \times (n + m))$
 * 空间复杂度：$O(n + m)$
 
@@ -128,7 +182,7 @@ class Solution {
 
 因此我们只需要初始化所有的 `ans[i] = -1`，并从节点 `0` 开始进行一次 `BFS`  即可。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     static int N = 110, M = 810, idx = 0;
@@ -168,6 +222,45 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int he[110], e[810], ne[810], w[810], idx = 0;
+    void add(int a, int b, int c) {
+        e[idx] = b;
+        w[idx] = c;
+        ne[idx] = he[a];
+        he[a] = idx++;
+    }
+    vector<int> shortestAlternatingPaths(int n, vector<vector<int>>& rs, vector<vector<int>>& bs) {
+        idx = 0;
+        fill(he, he + n, -1);
+        for (auto& e : rs) add(e[0], e[1], 1);
+        for (auto& e : bs) add(e[0], e[1], -1);
+        vector<int> ans(n, -1);
+        ans[0] = 0;
+        vector<bool> vis(rs.size() + bs.size(), false);
+        deque<vector<int>> d;
+        d.push_back({0, 0, 0}); // point, last, step
+        while (!d.empty()) {
+            vector<int> info = d.front();
+            d.pop_front();
+            int p = info[0], last = info[1], step = info[2];
+            for (int i = he[p]; i != -1; i = ne[i]) {
+                if (vis[i]) continue;
+                int j = e[i], c = w[i];
+                if (c + last == 0 || last == 0) {
+                    ans[j] = ans[j] == -1 ? step + 1 : min(ans[j], step + 1);
+                    d.push_back({j, c, step + 1});
+                    vis[i] = true;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
 * 时间复杂度：将点数记为 `n` ，边数记为 `m`。建图复杂度为 $O(m)$；构造答案复杂度为 $O(n + m)$。整体复杂度为 $O(n + m)$
 * 空间复杂度：$O(n + m)$
 
@@ -175,7 +268,7 @@ class Solution {
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.1224` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.1129` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
