--- a/LeetCode/131-140/139. 单词拆分（中等）.md
+++ b/LeetCode/131-140/139. 单词拆分（中等）.md
@@ -74,21 +74,27 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function wordBreak(s: string, wordDict: string[]): boolean {
-    const ss = new Set<string>(wordDict)
-    const n = s.length
-    const f = new Array<boolean>(n + 10).fill(false)
-    f[0] = true
-    for (let i = 1; i <= n; i++) {
-        for (let j = i; j >= 1 && !f[i]; j--) {
-            const sub = s.substring(j - 1, i)
-            if (ss.has(sub)) f[i] = f[j - 1]
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool wordBreak(string s, vector<string>& wordDict) {
+        unordered_set<string> set;
+        for (const string& word : wordDict) {
+            set.insert(word);
         }
+        int n = s.length();
+        vector<bool> f(n + 10, false);
+        f[0] = true;
+        for (int i = 1; i <= n; ++i) {
+            for (int j = 1; j <= i && !f[i]; ++j) {
+                string sub = s.substr(j - 1, i - j + 1);
+                if (set.find(sub) != set.end()) f[i] = f[j - 1] || f[i];
+            }
+        }
+        return f[n];
     }
-    return f[n]
-}
+};
 ```
 Python 代码：
 ```Python
@@ -106,6 +112,22 @@ class Solution:
                     f[i] = f[j - 1]
                 j -= 1
         return f[n]
+```
+TypeScript 代码：
+```TypeScript
+function wordBreak(s: string, wordDict: string[]): boolean {
+    const ss = new Set<string>(wordDict)
+    const n = s.length
+    const f = new Array<boolean>(n + 10).fill(false)
+    f[0] = true
+    for (let i = 1; i <= n; i++) {
+        for (let j = i; j >= 1 && !f[i]; j--) {
+            const sub = s.substring(j - 1, i)
+            if (ss.has(sub)) f[i] = f[j - 1]
+        }
+    }
+    return f[n]
+}
 ```
 * 时间复杂度：将 `wordDict` 转存在 `Set` 复杂度为 $O(m)$；`DP` 过程复忽裁剪子串和查询 `Set` 结构的常数，复杂度为 $O(n^2)$
 * 空间复杂度：$O(n + m)$
