--- a/LeetCode/1441-1450/1441. 用栈操作构建数组（中等）.md
+++ b/LeetCode/1441-1450/1441. 用栈操作构建数组（中等）.md
@@ -6,7 +6,9 @@ Tag : 「模拟」、「构造」
 
 
 
-给你一个数组 `target` 和一个整数 `n`。每次迭代，需要从  `list = { 1 , 2 , 3 ..., n }` 中依次读取一个数字。
+给你一个数组 `target` 和一个整数 `n`。
+
+每次迭代，需要从  `list = { 1 , 2 , 3 ..., n }` 中依次读取一个数字。
 
 请使用下述操作来构建目标数组 `target` ：
 
@@ -55,7 +57,11 @@ Tag : 「模拟」、「构造」
 
 ### 模拟
 
-根据题意进行模拟即可：每次我们将当前处理到 `i` 压入栈中（往答案添加一个 `Push`），然后判断当前处理到的 `i` 是否最新的栈顶元素 $target[j]$ 是否相同，若不相同则丢弃元素（往答案添加一个 `Pop`），若存在则将指针 `j` 后移，直到构建出目标答案。
+根据题意进行模拟即可。
+
+每次我们将当前处理到 `i` 压入栈中（往答案添加一个 `Push`），然后判断当前处理到的 `i` 是否最新的栈顶元素 $target[j]$ 是否相同。
+
+若不相同则丢弃元素（往答案添加一个 `Pop`），若存在则将指针 `j` 后移，直到构建出目标答案。
 
 Java 代码：
 ```Java
@@ -72,21 +78,24 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function buildArray(target: number[], n: number): string[] {
-    const ans = new Array<string>()
-    const m = target.length
-    for (let i = 1, j = 0; i <= n && j < m; i++) {
-        ans.push("Push")
-        if (target[j] != i) ans.push("Pop")
-        else j++
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<string> buildArray(vector<int>& target, int n) {
+        int m = target.size();
+        vector<string> ans;
+        for (int i = 1, j = 0; i <= n && j < m; i++) {
+            ans.push_back("Push");
+            if (target[j] != i) ans.push_back("Pop");
+            else j++;
+        }
+        return ans;   
     }
-    return ans
-}
+};
 ```
 Python3 代码：
-```Python3
+```Python
 class Solution:
     def buildArray(self, target: List[int], n: int) -> List[str]:
         ans = []
@@ -99,6 +108,19 @@ class Solution:
                 j += 1
             i += 1
         return ans
+```
+TypeScript 代码：
+```TypeScript
+function buildArray(target: number[], n: number): string[] {
+    const ans = new Array<string>()
+    const m = target.length
+    for (let i = 1, j = 0; i <= n && j < m; i++) {
+        ans.push("Push")
+        if (target[j] != i) ans.push("Pop")
+        else j++
+    }
+    return ans
+}
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
