--- a/LeetCode/1611-1620/1620. 网络信号最好的坐标（中等）.md
+++ b/LeetCode/1611-1620/1620. 网络信号最好的坐标（中等）.md
@@ -99,6 +99,52 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> bestCoordinate(vector<vector<int>>& towers, int k) {
+        const int n = 110;
+        vector<vector<int>> g(n, vector<int>(n, 0));
+        int x = 0, y = 0, val = 0;
+        for (const auto& t : towers) {
+            int a = t[0], b = t[1], q = t[2];
+            for (int i = max(0, a - k); i <= a + k; ++i) {
+                for (int j = max(0, b - k); j <= b + k; ++j) {
+                    double d = sqrt((a - i) * (a - i) + (b - j) * (b - j));
+                    if (d > k) continue;
+                    g[i][j] += floor(q / (1.0 + d));
+                    if (g[i][j] > val) {
+                        x = i; y = j; val = g[i][j];
+                    } else if (g[i][j] == val && (i < x || (i == x && j < y))) {
+                        x = i; y = j;
+                    }
+                }
+            }
+        }
+        return vector<int>{x, y};
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def bestCoordinate(self, towers: List[List[int]], k: int) -> List[int]:
+        g = [[0] * 110 for _ in range(110)]
+        x, y, val = 0, 0, 0
+        for (a, b, q) in towers:
+            for i in range(max(0, a - k), a + k + 1):
+                for j in range(max(0, b - k), b + k + 1):
+                    d = math.sqrt((a - i) * (a - i) + (b - j) * (b - j))
+                    if d > k:
+                        continue
+                    g[i][j] += int(q / (1 + d))
+                    if g[i][j] > val:
+                        val, x, y = g[i][j], i, j
+                    elif g[i][j] == val and ((i < x or (i == x and j < y))):
+                        x, y = i, j
+        return [x, y]
+```
 TypeScript 代码：
 ```TypeScript
 function bestCoordinate(towers: number[][], k: number): number[] {
@@ -122,25 +168,6 @@ function bestCoordinate(towers: number[][], k: number): number[] {
     }
     return [x, y]
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def bestCoordinate(self, towers: List[List[int]], k: int) -> List[int]:
-        g = [[0] * 110 for _ in range(110)]
-        x, y, val = 0, 0, 0
-        for (a, b, q) in towers:
-            for i in range(max(0, a - k), a + k + 1):
-                for j in range(max(0, b - k), b + k + 1):
-                    d = math.sqrt((a - i) * (a - i) + (b - j) * (b - j))
-                    if d > k:
-                        continue
-                    g[i][j] += int(q / (1 + d))
-                    if g[i][j] > val:
-                        val, x, y = g[i][j], i, j
-                    elif g[i][j] == val and ((i < x or (i == x and j < y))):
-                        x, y = i, j
-        return [x, y]
 ```
 * 时间复杂度：需要 $O(n)$ 的复杂度枚举所有的塔 $towers[i]$；对于每座塔，我们需要枚举以该塔为中心点，大小为 $(k + k)^2$ 的矩阵中的所有坐标。整体复杂度为 $O(n \times k^2)$
 * 空间复杂度：$O(M^2)$，其中 $M = 110$ 为棋盘大小
