--- a/LeetCode/1651-1660/1652. 拆炸弹（简单）.md
+++ b/LeetCode/1651-1660/1652. 拆炸弹（简单）.md
@@ -6,7 +6,9 @@ Tag : 「模拟」、「前缀和」
 
 
 
-你有一个炸弹需要拆除，时间紧迫！你的情报员会给你一个长度为 `n` 的 循环 数组 `code` 以及一个密钥 `k` 。
+你有一个炸弹需要拆除，时间紧迫！
+
+你的情报员会给你一个长度为 `n` 的 循环 数组 `code` 以及一个密钥 `k` 。
 
 为了获得正确的密码，你需要替换掉每一个数字。所有数字会 同时 被替换。
 
@@ -78,19 +80,22 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function decrypt(code: number[], k: number): number[] {
-    const n = code.length
-    const ans = new Array<number>(n).fill(0)
-    if (k == 0) return ans
-    const sum = new Array<number>(2 * n + 10).fill(0)
-    for (let i = 1; i <= 2 * n; i++) sum[i] = sum[i - 1] + code[(i - 1) % n]
-    for (let i = 1; i <= n; i++) {
-        if (k < 0) ans[i - 1] = sum[i + n - 1] - sum[i + n + k - 1]
-        else ans[i - 1] = sum[i + k] - sum[i]
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> decrypt(vector<int>& code, int k) {
+        int n = code.size();
+        vector<int> ans(n);
+        if (k == 0) return ans;
+        vector<long long> sum((n + 1) * 2, 0);
+        for (int i = 1; i <= 2 * n; ++i) sum[i] = sum[i - 1] + code[(i - 1) % n];
+        for (int i = 1; i <= n; ++i) {
+            if (k < 0) ans[i - 1] = sum[i + n - 1] - sum[i + n + k - 1];
+            else ans[i - 1] = sum[i + k] - sum[i]; 
+        }
+        return ans;
     }
-    return ans
 };
 ```
 Python 代码：
@@ -110,6 +115,21 @@ class Solution:
             else:
                 ans[i - 1] = sum[i + k] - sum[i]
         return ans
+```
+TypeScript 代码：
+```TypeScript
+function decrypt(code: number[], k: number): number[] {
+    const n = code.length
+    const ans = new Array<number>(n).fill(0)
+    if (k == 0) return ans
+    const sum = new Array<number>(2 * n + 10).fill(0)
+    for (let i = 1; i <= 2 * n; i++) sum[i] = sum[i - 1] + code[(i - 1) % n]
+    for (let i = 1; i <= n; i++) {
+        if (k < 0) ans[i - 1] = sum[i + n - 1] - sum[i + n + k - 1]
+        else ans[i - 1] = sum[i + k] - sum[i]
+    }
+    return ans
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
