--- a/LeetCode/1691-1700/1691. 堆叠长方体的最大高度（困难）.md
+++ b/LeetCode/1691-1700/1691. 堆叠长方体的最大高度（困难）.md
@@ -6,7 +6,9 @@ Tag : 「排序」、「序列 DP」、「动态规划」
 
 
 
-给你 `n` 个长方体 `cuboids`，其中第 `i` 个长方体的长宽高表示为 $cuboids[i] = [width_i, length_i, height_i]$（下标从 `0` 开始）。请你从 `cuboids` 选出一个 子集 ，并将它们堆叠起来。
+给你 `n` 个长方体 `cuboids`，其中第 `i` 个长方体的长宽高表示为 $cuboids[i] = [width_i, length_i, height_i]$（下标从 `0` 开始）。
+
+请你从 `cuboids` 选出一个「子集」，并将它们堆叠起来。
 
 如果 $width_{i} <= width_{j}$ 且 $length_{i} <= length_{j}$ 且 $height_{i} <= height_{j}$ ，你就可以将长方体 `i` 堆叠在长方体 `j` 上。你可以通过旋转把长方体的长宽高重新排列，以将它放在另一个长方体上。
 
@@ -49,7 +51,7 @@ Tag : 「排序」、「序列 DP」、「动态规划」
 ```
 
 提示：
-* $n == cuboids.length$
+* $n = cuboids.length$
 * $1 <= n <= 100$
 * $1 <= width_{i}, length_{i}, height_{i} <= 100$
 
@@ -68,7 +70,7 @@ Tag : 「排序」、「序列 DP」、「动态规划」
 实现上，当我们在判定某个盒子 `j` 是否能够位于盒子 `i` 的底部时，并不需要枚举两盒子的旋转情况，可以在进行 DP 之前先对所有盒子进行排序预处理（按照升序排序）。
 
 
-代码：
+Java 代码：
 ```Java 
 class Solution {
     public int maxHeight(int[][] cs) {
@@ -89,6 +91,68 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int maxHeight(vector<vector<int>>& cs) {
+        int n = cs.size();
+        for(int i = 0; i < n; i++) sort(cs[i].begin(), cs[i].end());
+        sort(cs.begin(), cs.end(), [](vector<int>& a, vector<int>& b){
+            return a[0] + a[1] + a[2] > b[0] + b[1] + b[2];
+        });
+        vector<int> f(n + 10, 0);
+        int ans = 0;
+        for(int i = 0; i < n; i++) {
+            f[i] = cs[i][2];
+            for(int j = 0; j < i; j++) {
+                if(cs[j][0] >= cs[i][0] && cs[j][1] >= cs[i][1] && cs[j][2] >= cs[i][2]) {
+                    f[i] = max(f[i], f[j] + cs[i][2]);
+                }
+            }
+            ans = max(ans, f[i]);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def maxHeight(self, cs):
+        n = len(cs)
+        for i in range(n):
+            cs[i].sort()
+        cs.sort(key=lambda x: -(x[0]+x[1]+x[2]))
+        f, ans = [0] * (n+10), 0
+        for i in range(n):
+            f[i] = cs[i][2]
+            for j in range(i):
+                if cs[j][0] >= cs[i][0] and cs[j][1] >= cs[i][1] and cs[j][2] >= cs[i][2]:
+                    f[i] = max(f[i], f[j] + cs[i][2])
+            ans = max(ans, f[i])
+        return ans
+```
+TypeScript 代码：
+```TypeScript 
+function maxHeight(cs: number[][]): number {
+    const n = cs.length;
+    for (let i = 0; i < n; i++) cs[i].sort((a, b) => a-b);
+    cs.sort((a, b) => (b[0] + b[1] + b[2]) - (a[0] + a[1] + a[2]));
+    const f: number[] = new Array(n + 10).fill(0);
+    let ans = 0;
+    for (let i = 0; i < n; i++) {
+        f[i] = cs[i][2];
+        for (let j = 0; j < i; j++) {
+            if (cs[j][0] >= cs[i][0] && cs[j][1] >= cs[i][1] && cs[j][2] >= cs[i][2]) {
+                f[i] = Math.max(f[i], f[j] + cs[i][2]);
+            }
+        }
+        ans = Math.max(ans, f[i]);
+    }
+    return ans;
+};
 ```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(n)$
