--- a/LeetCode/1691-1700/1697. 检查边长度限制的路径是否存在（困难）.md
+++ b/LeetCode/1691-1700/1697. 检查边长度限制的路径是否存在（困难）.md
@@ -97,6 +97,72 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int p[100010];
+    int find(int x) {
+        if (p[x] != x) p[x] = find(p[x]);
+        return p[x];
+    }
+    void unite(int a, int b) {
+        p[find(a)] = find(b);
+    }
+    bool query(int a, int b) {
+        return find(a) == find(b);
+    }
+    vector<bool> distanceLimitedPathsExist(int n, vector<vector<int>>& es, vector<vector<int>>& qs) {
+        for (int i = 0; i < n; i++) p[i] = i;
+        int m = es.size(), k = qs.size();
+        vector<vector<int>> qss(k, vector<int>(4, 0));
+        for (int i = 0; i < k; i++) qss[i] = {qs[i][0], qs[i][1], qs[i][2], i};
+        sort(qss.begin(), qss.end(), [](const vector<int>& a, const vector<int>& b) {
+            return a[2] < b[2];
+        });
+        sort(es.begin(), es.end(), [](const vector<int>& a, const vector<int>& b) {
+            return a[2] < b[2];
+        });
+        vector<bool> ans(k, false);
+        for (int i = 0, j = 0; i < k; i++) {
+            int a = qss[i][0], b = qss[i][1], t = qss[i][2], idx = qss[i][3];
+            while (j < m && es[j][2] < t) {
+                unite(es[j][0], es[j][1]);
+                j++;
+            }
+            ans[idx] = query(a, b);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def distanceLimitedPathsExist(self, n: int, es: List[List[int]], _qs: List[List[int]]) -> List[bool]:
+        p = [i for i in range(n)]
+        def find(x):
+            if p[x] != x:
+                p[x] = find(p[x])
+            return p[x]
+        def union(a, b):
+            p[find(a)] = p[find(b)]
+        def query(a, b):
+            return find(a) == find(b)
+        m, k = len(es), len(_qs)
+        qs = [(a, b, c, i) for i, (a, b, c) in enumerate(_qs)]
+        es.sort(key=lambda x: x[2])
+        qs.sort(key=lambda x: x[2])
+        j = 0
+        ans = [False] * k
+        for i in range(k):
+            a, b, t, idx = qs[i]
+            while j < m and es[j][2] < t:
+                union(es[j][0], es[j][1])
+                j += 1
+            ans[idx] = query(a, b)
+        return ans
+```
 TypeScript 代码：
 ```TypeScript 
 function distanceLimitedPathsExist(n: number, es: number[][], _qs: number[][]): boolean[] {
@@ -128,33 +194,6 @@ function distanceLimitedPathsExist(n: number, es: number[][], _qs: number[][]): 
     }
     return ans
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def distanceLimitedPathsExist(self, n: int, es: List[List[int]], _qs: List[List[int]]) -> List[bool]:
-        p = [i for i in range(n)]
-        def find(x):
-            if p[x] != x:
-                p[x] = find(p[x])
-            return p[x]
-        def union(a, b):
-            p[find(a)] = p[find(b)]
-        def query(a, b):
-            return find(a) == find(b)
-        m, k = len(es), len(_qs)
-        qs = [(a, b, c, i) for i, (a, b, c) in enumerate(_qs)]
-        es.sort(key=lambda x: x[2])
-        qs.sort(key=lambda x: x[2])
-        j = 0
-        ans = [False] * k
-        for i in range(k):
-            a, b, t, idx = qs[i]
-            while j < m and es[j][2] < t:
-                union(es[j][0], es[j][1])
-                j += 1
-            ans[idx] = query(a, b)
-        return ans
 ```
 * 时间复杂度：初始化并查集的复杂度为 $O(n)$；对所有边进行排序复杂度为 $O(m\log{m})$；对所有询问进行排序复杂度为 $O(k\log{k})$；统计答案时使用双指针的方式将所有边运用到并查集上，整体复杂度为 $O(k + m)$。整体复杂度为 $O(n + m\log{m} + k\log{k})$
 * 空间复杂度：$O(n)$
