--- a/LeetCode/1751-1760/1760. 袋子里最少数目的球（中等）.md
+++ b/LeetCode/1751-1760/1760. 袋子里最少数目的球（中等）.md
@@ -91,6 +91,41 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minimumSize(vector<int>& nums, int maxv) {
+        int l = 1, r = 0x3f3f3f3f;
+        while (l < r) {
+            int mid = l + r >> 1;
+            if (check(nums, mid, maxv)) r = mid;    
+            else l = mid + 1;
+        }
+        return r;
+    }
+    bool check(vector<int>& nums, int limit, int maxv) {
+        int cnt = 0;
+        for (int x : nums) cnt += ceil(x * 1.0 / limit) - 1;
+        return cnt <= maxv;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minimumSize(self, nums: List[int], maxv: int) -> int:
+        def check(nums, limit, maxv):
+            return sum([(x + limit - 1) // limit - 1 for x in nums]) <= maxv
+        l, r = 1, 0x3f3f3f3f
+        while l < r:
+            mid = l + r >> 1
+            if check(nums, mid, maxv):
+                r = mid
+            else:
+                l = mid + 1
+        return r
+```
 TypeScript 代码：
 ```TypeScript
 function minimumSize(nums: number[], max: number): number {
@@ -107,21 +142,6 @@ function minimumSize(nums: number[], max: number): number {
     }
     return r
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def minimumSize(self, nums: List[int], maxv: int) -> int:
-        def check(nums, limit, maxv):
-            return sum([(x + limit - 1) // limit - 1 for x in nums]) <= maxv
-        l, r = 1, 0x3f3f3f3f
-        while l < r:
-            mid = l + r >> 1
-            if check(nums, mid, maxv):
-                r = mid
-            else:
-                l = mid + 1
-        return r
 ```
 * 时间复杂度：$O(n \log{M})$，其中 $M = 1e9$ 为值域大小
 * 空间复杂度：$O(1)$
