--- a/LeetCode/1771-1780/1780. 判断一个数字是否可以表示成三的幂的和（中等）.md
+++ b/LeetCode/1771-1780/1780. 判断一个数字是否可以表示成三的幂的和（中等）.md
@@ -8,7 +8,7 @@ Tag : 「数学」
 
 给你一个整数 `n`，如果你可以将 `n` 表示成若干个不同的三的幂之和，请你返回 `true`，否则请返回 `false`。
 
-对于一个整数 `y`，如果存在整数 `x` 满足 `y == 3x`，我们称这个整数 `y` 是三的幂。
+对于一个整数 `y`，如果存在整数 `x` 满足 $y = 3^x$，我们称这个整数 `y` 是三的幂。
 
 示例 1：
 ```
@@ -58,15 +58,18 @@ class Solution {
     }
 }
 ```
-TypeScript  代码：
-```TypeScript 
-function checkPowersOfThree(n: number): boolean {
-    while (n != 0) {
-        if (n % 3 == 2) return false
-        n = Math.floor(n / 3)
+C++ 代码
+```C++
+class Solution {
+public:
+    bool checkPowersOfThree(int n) {
+        while (n != 0) {
+            if (n % 3 == 2) return false;
+            n /= 3;
+        }
+        return true;
     }
-    return true
-}
+};
 ```
 Python 代码
 ```Python
@@ -77,6 +80,16 @@ class Solution:
                 return False
             n //= 3
         return True
+```
+TypeScript  代码：
+```TypeScript 
+function checkPowersOfThree(n: number): boolean {
+    while (n != 0) {
+        if (n % 3 == 2) return false
+        n = Math.floor(n / 3)
+    }
+    return true
+}
 ```
 * 时间复杂度：$O(\log{n})$
 * 空间复杂度：$O(1)$
