--- a/LeetCode/671-680/672. 灯泡开关 Ⅱ（中等）.md
+++ b/LeetCode/671-680/672. 灯泡开关 Ⅱ（中等）.md
@@ -6,9 +6,9 @@ Tag : 「脑筋急转弯」、「找规律」
 
 
 
-房间中有 `n` 只已经打开的灯泡，编号从 `1` 到 `n` 。墙上挂着 `4` 个开关 。
+房间中有 `n` 只已经打开的灯泡，编号从 `1` 到 `n` 。
 
-这 `4` 个开关各自都具有不同的功能，其中：
+墙上挂着 `4` 个开关 ，这 `4` 个开关各自都具有不同的功能，其中：
 
 * 开关 1 ：反转当前所有灯的状态（即开变为关，关变为开）
 * 开关 2 ：反转编号为偶数的灯的状态（即 `2, 4, ...`）
@@ -83,13 +83,16 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function flipLights(n: number, k: number): number {
-    if (k == 0) return 1
-    if (n == 1) return 2
-    else if (n == 2) return k == 1 ? 3 : 4;
-    else return k == 1 ? 4 : k == 2 ? 7 : 8;
+C++ 代码：
+```C++
+class Solution {
+public:
+    int flipLights(int n, int k) {
+        if (k == 0) return 1;
+        if (n == 1) return 2;
+        else if (n == 2) return (k == 1) ? 3 : 4;
+        else return (k == 1) ? 4 : (k == 2) ? 7 : 8;
+    }
 };
 ```
 Python 3 代码：
@@ -104,6 +107,15 @@ class Solution:
             return 3 if k == 1 else 4
         else:
             return 4 if k == 1 else 7 if k == 2 else 8
+```
+TypeScript 代码：
+```TypeScript
+function flipLights(n: number, k: number): number {
+    if (k == 0) return 1
+    if (n == 1) return 2
+    else if (n == 2) return k == 1 ? 3 : 4;
+    else return k == 1 ? 4 : k == 2 ? 7 : 8;
+};
 ```
 * 时间复杂度：$O(1)$
 * 空间复杂度：$O(1)$
