--- a/LeetCode/691-700/698. 划分为k个相等的子集（中等）.md
+++ b/LeetCode/691-700/698. 划分为k个相等的子集（中等）.md
@@ -78,6 +78,63 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> nums;
+    int n, t, k;
+    bool dfs(int idx, int cur, int cnt, vector<bool>& vis) {
+        if (cnt == k) return true;
+        if (cur == t) return dfs(n - 1, 0, cnt + 1, vis);
+        for (int i = idx; i >= 0; i--) {
+            if (vis[i] || cur + nums[i] > t) continue;
+            vis[i] = true;
+            if (dfs(i - 1, cur + nums[i], cnt, vis)) return true;
+            vis[i] = false;
+            if (cur == 0) return false;
+        }
+        return false;
+    }
+    bool canPartitionKSubsets(vector<int>& _nums, int _k) {
+        nums = _nums; k = _k;
+        int tot = 0;
+        for (int x : nums) tot += x;
+        if (tot % k != 0) return false;
+        sort(nums.begin(), nums.end());
+        n = nums.size(); t = tot / k;
+        vector<bool> vis(n, false);
+        return dfs(n - 1, 0, 0, vis);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def canPartitionKSubsets(self, _nums, _k):
+        nums, k = _nums, _k
+        tot = sum(nums)
+        if tot % k != 0:
+            return False
+        nums.sort()
+        n, t = len(nums), tot // k
+        def dfs(idx, cur, cnt, vis):
+            if cnt == k:
+                return True
+            if cur == t:
+                return dfs(n - 1, 0, cnt + 1, vis)
+            for i in range(idx, -1, -1):
+                if vis[i] or cur + nums[i] > t:
+                    continue
+                vis[i] = True
+                if dfs(i - 1, cur + nums[i], cnt, vis):
+                    return True
+                vis[i] = False
+                if cur == 0:
+                    return False
+            return False
+        return dfs(n - 1, 0, 0, [False] * n)
+```
 TypeScript 代码：
 ```TypeScript
 let nums: number[];
@@ -127,7 +184,7 @@ function dfs(idx: number, cur: number, cnt: number, vis: boolean[]): boolean {
 
 该计算规则可确保排列变化的连续性能有效体现在 `diff` 数值上。
 
-Java 代码（`2022/09/20` 可通过）：
+Java 代码（`2024/06/01` 可通过）：
 ```Java
 class Solution {
     int[] nums;
@@ -177,7 +234,7 @@ class Solution {
     }
 }
 ```
-TypeScript 代码（`2022/09/20` 可通过）：
+TypeScript 代码（`2024/06/01` 可通过）：
 ```TypeScript
 let nums: number[];
 let n: number, tval: number, k: number
@@ -214,7 +271,7 @@ function canPartitionKSubsets(_nums: number[], _k: number): boolean {
     for (let x of nums) tot += x
     if (tot % k != 0) return false
     n = nums.length; tval = tot / k
-    hi = 1e9; lo = 1e-4; fa = 0.98; N = 700
+    hi = 1e7; lo = 1e-4; fa = 0.977; N = 420;
     ans = false
     while (!ans && N-- > 0) sa()
     return ans
