--- a/LeetCode/751-760/754. 到达终点数字（中等）.md
+++ b/LeetCode/751-760/754. 到达终点数字（中等）.md
@@ -107,17 +107,21 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function reachNumber(target: number): number {
-    if (target < 0) target = -target
-    let k = Math.floor(Math.sqrt(2 * target)), dist = k * (k + 1) / 2
-    while (dist < target || (dist - target) % 2 == 1) {
-        k++
-        dist = k * (k + 1) / 2
+C++ 代码：
+```C++
+class Solution {
+public:
+    int reachNumber(int target) {
+        if (target < 0) target = -target;
+        int k = static_cast<int>(std::sqrt(2 * target));
+        int dist = k * (k + 1) / 2;
+        while (dist < target || (dist - target) % 2 == 1) {
+            k++;
+            dist = k * (k + 1) / 2;
+        }
+        return k;
     }
-    return k
-}
+};
 ```
 Python 代码：
 ```Python
@@ -131,6 +135,18 @@ class Solution:
             k += 1
             dist = k * (k + 1) / 2
         return k
+```
+TypeScript 代码：
+```TypeScript
+function reachNumber(target: number): number {
+    if (target < 0) target = -target
+    let k = Math.floor(Math.sqrt(2 * target)), dist = k * (k + 1) / 2
+    while (dist < target || (dist - target) % 2 == 1) {
+        k++
+        dist = k * (k + 1) / 2
+    }
+    return k
+}
 ```
 * 时间复杂度：$O(1)$
 * 空间复杂度：$O(1)$
