--- a/LeetCode/771-780/775. 全局倒置与局部倒置（中等）.md
+++ b/LeetCode/771-780/775. 全局倒置与局部倒置（中等）.md
@@ -56,7 +56,7 @@ Tag : 「树状数组」、「数学」
 
 一个容易想到的做法是利用「树状数组」，虽然该做法没有利用到核心条件「$nums$ 是一个 $[0, n - 1]$ 的排列」，但根据数据范围 $n$ 可知该复杂度为 $O(n\log{n})$ 的做法可过，且依赖的条件更少，适用范围更广。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     int n;
@@ -86,6 +86,67 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int n;
+    vector<int> tr;
+    int lowbit(int x) {
+        return x & -x;
+    }
+    void add(int x) {
+        for (int i = x; i <= n; i += lowbit(i)) tr[i]++;
+    }
+    int query(int x) {
+        int ans = 0;
+        for (int i = x; i > 0; i -= lowbit(i)) ans += tr[i];
+        return ans;
+    }
+    bool isIdealPermutation(vector<int>& nums) {
+        n = nums.size();
+        tr.resize(n + 10);
+        add(nums[0] + 1);
+        long a = 0, b = 0;
+        for (int i = 1; i < n; i++) {
+            a += query(n) - query(nums[i] + 1);
+            b += nums[i] < nums[i - 1] ? 1 : 0;
+            add(nums[i] + 1);
+        }
+        return a == b;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def lowbit(self, x):
+        return x & -x
+
+    def add(self, tr, x, n):
+        i = x
+        while i <= n:
+            tr[i] += 1
+            i += self.lowbit(i)
+
+    def query(self, tr, x):
+        i, ans = x, 0
+        while i > 0:
+            ans += tr[i]
+            i -= self.lowbit(i)
+        return ans
+
+    def isIdealPermutation(self, nums: List[int]) -> bool:
+        n = len(nums)
+        tr = [0] * (n + 10)
+        self.add(tr, nums[0] + 1, n)
+        a, b = 0, 0
+        for i in range(1, n):
+            a += self.query(tr, n) - self.query(tr, nums[i] + 1)
+            b += nums[i] < nums[i - 1]
+            self.add(tr, nums[i] + 1, n)
+        return a == b
+```
 * 时间复杂度：$O(n\log{n})$
 * 空间复杂度：$O(n)$
 
@@ -111,7 +172,7 @@ class Solution {
 
 我们可以结合「$nums$ 是一个 $[0, n - 1]$ 的排列」来分析，若需要避免所有 $nums[j] > nums[i]$ 的逆序对均不满足 $j + 1 < i$，只能是所有逆序对均由相邻数值产生。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public boolean isIdealPermutation(int[] nums) {
@@ -121,6 +182,36 @@ class Solution {
         return true;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool isIdealPermutation(vector<int>& nums) {
+        for (int i = 0; i < nums.size(); ++i) {
+            if (abs(nums[i] - i) >= 2) return false;
+        }
+        return true;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def isIdealPermutation(self, nums: List[int]) -> bool:
+        for i in range(len(nums)):
+            if abs(nums[i] - i) >= 2:
+                return False
+        return True
+```
+TypeScript 代码：
+```TypeScript
+function isIdealPermutation(nums: number[]): boolean {
+    for (let i = 0; i < nums.length; i++) {
+        if (Math.abs(nums[i] - i) >= 2) return false;
+    }
+    return true;
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
