--- a/LeetCode/781-790/782. 变为棋盘（困难）.md
+++ b/LeetCode/781-790/782. 变为棋盘（困难）.md
@@ -56,7 +56,7 @@ Tag : 「构造」
 
 我们需要考虑何种情况下无解，以及有解情况的最小步数。
 
-在给定棋盘大小 $n$ 的前提下，所能构造的合法棋盘只有两种情况：**首个格子为 $0$ 或首个格子为 $1$**，即问题转化为能否构造出合法棋盘，以及构造哪种合法棋盘所用步数更小。
+在给定棋盘大小 $n$ 的前提下，所能构造的合法棋盘只有两种情况：首个格子为 $0$ 或首个格子为 $1$，即问题转化为能否构造出合法棋盘，以及构造哪种合法棋盘所用步数更小。
 
 同时，**交换行和交换列均不会影响行的种类数量和列的种类数量**，因此我们可以得到第一个判断无解的条件：若起始棋盘的行/列种类数不为 $2$，必然无法构造出合法棋盘。
 
@@ -106,6 +106,40 @@ class Solution {
         return ans >= INF ? -1 : ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int n = 0, INF = 0x3f3f3f3f;
+    int getCnt(int a, int b) {
+        return __builtin_popcount(a) != __builtin_popcount(b) ? INF : (__builtin_popcount(a ^ b) / 2);
+    }
+    int movesToChessboard(vector<vector<int>>& g) {
+        n = g.size();
+        int r1 = -1, r2 = -1, c1 = -1, c2 = -1, mask = (1 << n) - 1;
+        for (int i = 0; i < n; i++) {
+            int a = 0, b = 0;
+            for (int j = 0; j < n; j++) {
+                if (g[i][j] == 1) a |= (1 << j);
+                if (g[j][i] == 1) b |= (1 << j);
+            }
+            if (r1 == -1) r1 = a;
+            else if (r2 == -1 && a != r1) r2 = a;
+            if (c1 == -1) c1 = b;
+            else if (c2 == -1 && b != c1) c2 = b;
+            if (a != r1 && a != r2) return -1;
+            if (b != c1 && b != c2) return -1;
+        }
+        if (__builtin_popcount(r1) + __builtin_popcount(r2) != n) return -1;
+        if (__builtin_popcount(c1) + __builtin_popcount(c2) != n) return -1;
+        if ((r1 ^ r2) != mask || (c1 ^ c2) != mask) return -1;
+        int t = 0;
+        for (int i = 0; i < n; i += 2) t |= (1 << i);
+        int ans = min(getCnt(r1, t), getCnt(r2, t)) + min(getCnt(c1, t), getCnt(c2, t));
+        return (ans >= INF) ? -1 : ans;
+    }
+};
 ```
 TypeScript 代码：
 ```TypeScript
