--- a/LeetCode/781-790/784. 字母大小写全排列（中等）.md
+++ b/LeetCode/781-790/784. 字母大小写全排列（中等）.md
@@ -70,6 +70,46 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<string> ans;
+    string s;
+    void dfs(int idx, int n, string cur) {
+        if (idx == n) {
+            ans.push_back(cur);
+            return;
+        }
+        cur.push_back(s[idx]);
+        dfs(idx + 1, n, cur);
+        if (isalpha(s[idx])) {
+            cur[idx] = s[idx] ^ 32;
+            dfs(idx + 1, n, cur);
+        }
+    }
+    vector<string> letterCasePermutation(string s) {
+        this->s = s;
+        dfs(0, s.length(), "");
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def letterCasePermutation(self, s: str) -> List[str]:
+        ans = []
+        def dfs(idx, n, cur):
+            if idx == n:
+                ans.append(cur)
+                return 
+            dfs(idx + 1, n, cur + s[idx])
+            if 'a' <= s[idx] <= 'z' or 'A' <= s[idx] <= 'Z':
+                dfs(idx + 1, n, cur + s[idx].swapcase())
+        dfs(0, len(s), '')
+        return ans
+```
 TypeScript 代码：
 ```TypeScript
 function letterCasePermutation(s: string): string[] {
@@ -87,21 +127,6 @@ function letterCasePermutation(s: string): string[] {
     dfs(0, s.length, "")
     return ans
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def letterCasePermutation(self, s: str) -> List[str]:
-        ans = []
-        def dfs(idx, n, cur):
-            if idx == n:
-                ans.append(cur)
-                return 
-            dfs(idx + 1, n, cur + s[idx])
-            if 'a' <= s[idx] <= 'z' or 'A' <= s[idx] <= 'Z':
-                dfs(idx + 1, n, cur + s[idx].swapcase())
-        dfs(0, len(s), '')
-        return ans
 ```
 * 时间复杂度：最坏情况下原串 `s` 的每一位均为字母（均有保留和转换两种决策），此时具体方案数量共 $2^n$ 种；同时每一种具体方案我们都需要用与原串长度相同的复杂度来进行构造。复杂度为 $O(n \times 2^n)$
 * 空间复杂度：$O(n \times 2^n)$
@@ -136,26 +161,26 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function letterCasePermutation(str: string): string[] {
-    function isLetter(ch: string): boolean {
-        return (ch >= 'a' && ch <= 'z') || (ch >= 'A' && ch <= 'Z')
-    }
-    const ans = new Array<string>()
-    let n = str.length, m = 0
-    for (let i = 0; i < n; i++) m += isLetter(str[i]) ? 1 : 0
-    for (let s = 0; s < (1 << m); s++) {
-        let cur = ''
-        for (let i = 0, j = 0; i < n; i++) {
-            if (!isLetter(str[i]) || ((s >> j) & 1) == 0) cur += str[i]
-            else cur += String.fromCharCode(str.charCodeAt(i) ^ 32)
-            if (isLetter(str[i])) j++
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<string> letterCasePermutation(string str) {
+        vector<string> ans;
+        int n = str.length(), m = 0;
+        for (int i = 0; i < n; i++) m += isalpha(str[i]) ? 1 : 0;
+        for (int s = 0; s < (1 << m); s++) {
+            string cs = str;
+            for (int i = 0, j = 0; i < n; i++) {
+                if (!isalpha(cs[i])) continue;
+                cs[i] = ((s >> j) & 1) ? (cs[i] ^ 32) : cs[i];
+                j++;
+            }
+            ans.push_back(cs);
         }
-        ans.push(cur)
+        return ans;
     }
-    return ans
-}
+};
 ```
 Python 代码：
 ```Python
@@ -177,6 +202,27 @@ class Solution:
                     j += 1
             ans.append(cur)
         return ans
+```
+TypeScript 代码：
+```TypeScript
+function letterCasePermutation(str: string): string[] {
+    function isLetter(ch: string): boolean {
+        return (ch >= 'a' && ch <= 'z') || (ch >= 'A' && ch <= 'Z')
+    }
+    const ans = new Array<string>()
+    let n = str.length, m = 0
+    for (let i = 0; i < n; i++) m += isLetter(str[i]) ? 1 : 0
+    for (let s = 0; s < (1 << m); s++) {
+        let cur = ''
+        for (let i = 0, j = 0; i < n; i++) {
+            if (!isLetter(str[i]) || ((s >> j) & 1) == 0) cur += str[i]
+            else cur += String.fromCharCode(str.charCodeAt(i) ^ 32)
+            if (isLetter(str[i])) j++
+        }
+        ans.push(cur)
+    }
+    return ans
+}
 ```
 * 时间复杂度：最坏情况下原串 `s` 的每一位均为字母（均有保留和转换两种决策），此时具体方案数量共 $2^n$ 种；同时每一种具体方案我们都需要用与原串长度相同的复杂度来进行构造。复杂度为 $O(n \times 2^n)$
 * 空间复杂度：$O(n \times 2^n)$
