--- a/LeetCode/791-800/799. 香槟塔（中等）.md
+++ b/LeetCode/791-800/799. 香槟塔（中等）.md
@@ -72,6 +72,38 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    double champagneTower(int k, int n, int m) {
+        vector<vector<double>> f(n + 10, vector<double>(n + 10, 0.0));
+        f[0][0] = k;
+        for (int i = 0; i <= n; ++i) {
+            for (int j = 0; j <= i; ++j) {
+                if (f[i][j] <= 1) continue;
+                f[i + 1][j] += (f[i][j] - 1.0) / 2.0;
+                f[i + 1][j + 1] += (f[i][j] - 1.0) / 2.0;
+            }
+        }
+        return min(f[n][m], 1.0);
+    }
+};
+```
+Python3 代码：
+```Python
+class Solution:
+    def champagneTower(self, k: int, n: int, m: int) -> float:
+        f = [[0] * (n + 10) for _ in range(n + 10)]
+        f[0][0] = k
+        for i in range(n + 1):
+            for j in range(i + 1):
+                if f[i][j] <= 1:
+                    continue
+                f[i + 1][j] += (f[i][j] - 1) / 2
+                f[i + 1][j + 1] += (f[i][j] - 1) / 2
+        return min(f[n][m], 1)
+```
 TypeScript 代码：
 ```TypeScript
 function champagneTower(k: number, n: number, m: number): number {
@@ -87,20 +119,6 @@ function champagneTower(k: number, n: number, m: number): number {
     }
     return Math.min(f[n][m], 1)
 }
-```
-Python3 代码：
-```Python
-class Solution:
-    def champagneTower(self, k: int, n: int, m: int) -> float:
-        f = [[0] * (n + 10) for _ in range(n + 10)]
-        f[0][0] = k
-        for i in range(n + 1):
-            for j in range(i + 1):
-                if f[i][j] <= 1:
-                    continue
-                f[i + 1][j] += (f[i][j] - 1) / 2
-                f[i + 1][j + 1] += (f[i][j] - 1) / 2
-        return min(f[n][m], 1)
 ```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(n^2)$
