--- a/LeetCode/811-820/813. 最大平均值和的分组（中等）.md
+++ b/LeetCode/811-820/813. 最大平均值和的分组（中等）.md
@@ -6,15 +6,19 @@ Tag : 「序列 DP」、「前缀和」、「动态规划」、「数学」
 
 
 
-给定数组 `nums` 和一个整数 `k` 。我们将给定的数组 `nums` 分成 最多 `k` 个相邻的非空子数组 。 分数 由每个子数组内的平均值的总和构成。
+给定数组 `nums` 和一个整数 `m` 。
+
+我们将给定的数组 `nums` 分成最多 `m` 个相邻的非空子数组，分数由每个子数组内的平均值的总和构成。
 
 注意我们必须使用 `nums` 数组中的每一个数进行分组，并且分数不一定需要是整数。
 
-返回我们所能得到的最大 分数 是多少。答案误差在 $10^{-6}$ 内被视为是正确的。
+返回我们所能得到的最大分数是多少。
+
+答案误差在 $10^{-6}$ 内被视为是正确的。
 
 示例 1:
 ```
-输入: nums = [9,1,2,3,9], k = 3
+输入: nums = [9,1,2,3,9], m = 3
 
 输出: 20.00000
 
@@ -25,7 +29,7 @@ nums 的最优分组是[9], [1, 2, 3], [9]. 得到的分数是 9 + (1 + 2 + 3) /
 ```
 示例 2:
 ```
-输入: nums = [1,2,3,4,5,6,7], k = 4
+输入: nums = [1,2,3,4,5,6,7], m = 4
 
 输出: 20.50000
 ```
@@ -74,6 +78,48 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    double largestSumOfAverages(vector<int>& nums, int m) {
+        int n = nums.size();
+        vector<double> sum(n + 10, 0);
+        for (int i = 1; i <= n; i++) sum[i] = sum[i - 1] + nums[i - 1];
+        vector<vector<double>> f(n + 10, vector<double>(m + 10, 0));
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= min(i, m); j++) {
+                if (j == 1) {
+                    f[i][j] = sum[i] / i;
+                } else {
+                    for (int k = 2; k <= i; k++) {
+                        f[i][j] = max(f[i][j], f[k - 1][j - 1] + (sum[i] - sum[k - 1]) / (i - k + 1));
+                    }
+                }
+            }
+        }
+        return f[n][m];
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def largestSumOfAverages(self, nums: List[int], m: int) -> float:
+        n = len(nums)
+        psum = [0] * (n + 10)
+        for i in range(1, n + 1):
+            psum[i] = psum[i - 1] + nums[i - 1]
+        f = [[0] * (m + 10) for _ in range(n + 10)]
+        for i in range(1, n + 1):
+            for j in range(1, min(i, m) + 1):
+                if j == 1:
+                    f[i][j] = psum[i] / i
+                else:
+                    for k in range(2, i + 1):
+                        f[i][j] = max(f[i][j], f[k - 1][j - 1] + (psum[i] - psum[k - 1]) / (i - k + 1))
+        return f[n][m]
+```
 TypeScript 代码：
 ```TypeScript
 function largestSumOfAverages(nums: number[], m: number): number {
@@ -95,24 +141,6 @@ function largestSumOfAverages(nums: number[], m: number): number {
     }
     return f[n][m]
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def largestSumOfAverages(self, nums: List[int], m: int) -> float:
-        n = len(nums)
-        psum = [0] * (n + 10)
-        for i in range(1, n + 1):
-            psum[i] = psum[i - 1] + nums[i - 1]
-        f = [[0] * (m + 10) for _ in range(n + 10)]
-        for i in range(1, n + 1):
-            for j in range(1, min(i, m) + 1):
-                if j == 1:
-                    f[i][j] = psum[i] / i
-                else:
-                    for k in range(2, i + 1):
-                        f[i][j] = max(f[i][j], f[k - 1][j - 1] + (psum[i] - psum[k - 1]) / (i - k + 1))
-        return f[n][m]
 ```
 * 时间复杂度：$O(n^2 \times m)$
 * 空间复杂度：$O(n \times m)$
