--- a/LeetCode/821-830/827. 最大人工岛（困难）.md
+++ b/LeetCode/821-830/827. 最大人工岛（困难）.md
@@ -121,6 +121,114 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int p[510 * 510], sz[510 * 510];
+    vector<vector<int>> dirs = {{1, 0}, {-1, 0}, {0, 1}, {0, -1}};
+    int find(int x) {
+        if (p[x] != x) p[x] = find(p[x]);
+        return p[x];
+    }
+    void unionX(int a, int b) {
+        int ra = find(a), rb = find(b);
+        if (ra == rb) return;
+        if (sz[ra] > sz[rb]) {
+            unionX(b, a);
+        } else {
+            sz[rb] += sz[ra];
+            p[ra] = p[rb];
+        }
+    }
+    int largestIsland(vector<vector<int>>& g) {
+        int n = g.size();
+        for (int i = 1; i <= n * n; i++) {
+            p[i] = i; sz[i] = 1;
+        }
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                if (g[i][j] == 0) continue;
+                for (const auto& di : dirs) {
+                    int x = i + di[0], y = j + di[1];
+                    if (x < 0 || x >= n || y < 0 || y >= n || g[x][y] == 0) continue;
+                    unionX(i * n + j + 1, x * n + y + 1);
+                }
+            }
+        }
+        int ans = 0;
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                if (g[i][j] == 1) {
+                    ans = max(ans, sz[find(i * n + j + 1)]);
+                } else {
+                    int tot = 1;
+                    unordered_set<int> set;
+                    for (const auto& di : dirs) {
+                        int x = i + di[0], y = j + di[1];
+                        if (x < 0 || x >= n || y < 0 || y >= n || g[x][y] == 0) continue;
+                        int root = find(x * n + y + 1);
+                        if (set.find(root) != set.end()) continue;
+                        tot += sz[root];
+                        set.insert(root);
+                    }
+                    ans = max(ans, tot);
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def find(self, p, x):
+        if p[x] != x:
+            p[x] = self.find(p, p[x])
+        return p[x]
+
+    def union(self, p, sz, a, b):
+        ra, rb = self.find(p, a), self.find(p, b)
+        if ra == rb:
+            return 
+        if sz[ra] > sz[rb]:
+            ra, rb = rb, ra
+        sz[rb] += sz[ra]
+        p[ra] = p[rb]
+
+    def largestIsland(self, g: List[List[int]]) -> int:
+        n, ans = len(g), 0
+        p, sz = [i for i in range(n * n + 10)], [1 for _ in range(n * n + 10)]
+        dirs = [[1,0],[-1,0],[0,1],[0,-1]]
+        for i in range(n):
+            for j in range(n):
+                if g[i][j] == 0:
+                    continue
+                for di in dirs:
+                    x, y = i + di[0], j + di[1]
+                    if x < 0 or x >= n or y < 0 or y >= n or g[x][y] == 0:
+                        continue
+                    self.union(p, sz, i * n + j + 1, x * n + y + 1)
+        for i in range(n):
+            for j in range(n):
+                if g[i][j] == 1:
+                    ans = max(ans, sz[self.find(p, i * n + j + 1)])
+                else:
+                    tot = 1
+                    vis = set()
+                    for di in dirs:
+                        x, y = i + di[0], j + di[1]
+                        if x < 0 or x >= n or y < 0 or y >= n or g[x][y] == 0:
+                            continue
+                        root = self.find(p, x * n + y + 1)
+                        if root in vis:
+                            continue
+                        tot += sz[root]
+                        vis.add(root)
+                    ans = max(ans, tot)
+        return ans
+```
 TypeScript 代码：
 ```TypeScript
 const N = 510
@@ -176,55 +284,6 @@ function largestIsland(g: number[][]): number {
     }
     return ans
 };
-```
-Python 代码：
-```Python
-class Solution:
-    def find(self, p, x):
-        if p[x] != x:
-            p[x] = self.find(p, p[x])
-        return p[x]
-
-    def union(self, p, sz, a, b):
-        ra, rb = self.find(p, a), self.find(p, b)
-        if ra == rb:
-            return 
-        if sz[ra] > sz[rb]:
-            ra, rb = rb, ra
-        sz[rb] += sz[ra]
-        p[ra] = p[rb]
-
-    def largestIsland(self, g: List[List[int]]) -> int:
-        n, ans = len(g), 0
-        p, sz = [i for i in range(n * n + 10)], [1 for _ in range(n * n + 10)]
-        dirs = [[1,0],[-1,0],[0,1],[0,-1]]
-        for i in range(n):
-            for j in range(n):
-                if g[i][j] == 0:
-                    continue
-                for di in dirs:
-                    x, y = i + di[0], j + di[1]
-                    if x < 0 or x >= n or y < 0 or y >= n or g[x][y] == 0:
-                        continue
-                    self.union(p, sz, i * n + j + 1, x * n + y + 1)
-        for i in range(n):
-            for j in range(n):
-                if g[i][j] == 1:
-                    ans = max(ans, sz[self.find(p, i * n + j + 1)])
-                else:
-                    tot = 1
-                    vis = set()
-                    for di in dirs:
-                        x, y = i + di[0], j + di[1]
-                        if x < 0 or x >= n or y < 0 or y >= n or g[x][y] == 0:
-                            continue
-                        root = self.find(p, x * n + y + 1)
-                        if root in vis:
-                            continue
-                        tot += sz[root]
-                        vis.add(root)
-                    ans = max(ans, tot)
-        return ans
 ```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(n^2)$
