--- a/LeetCode/821-830/828. 统计子串中的唯一字符（困难）.md
+++ b/LeetCode/821-830/828. 统计子串中的唯一字符（困难）.md
@@ -10,7 +10,9 @@ Tag : 「模拟」、「数学」、「线性 DP」
 
 例如：`s = "LEETCODE"` ，则其中 `"L"`, `"T"`,`"C"`,`"O"`,`"D"` 都是唯一字符，因为它们只出现一次，所以 `countUniqueChars(s) = 5`。
 
-本题将会给你一个字符串 `s` ，我们需要返回 `countUniqueChars(t)` 的总和，其中 `t` 是 `s` 的子字符串。输入用例保证返回值为 `32` 位整数。
+本题将会给你一个字符串 `s` ，我们需要返回 `countUniqueChars(t)` 的总和，其中 `t` 是 `s` 的子字符串。
+
+输入用例保证返回值为 `32` 位整数。
 
 注意，某些子字符串可能是重复的，但你统计时也必须算上这些重复的子字符串（也就是说，你必须统计 `s` 的所有子字符串中的唯一字符）。
 
@@ -84,6 +86,48 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int uniqueLetterString(string s) {
+        int n = s.size(), ans = 0;
+        vector<int> l(n, -1), r(n, n);
+        vector<int> idx(26, -1);
+        for (int i = 0; i < n; i++) {
+            int u = s[i] - 'A';
+            l[i] = idx[u];
+            idx[u] = i;
+        }
+        fill(idx.begin(), idx.end(), n);
+        for (int i = n - 1; i >= 0; i--) {
+            int u = s[i] - 'A';
+            r[i] = idx[u];
+            idx[u] = i;
+        }
+        for (int i = 0; i < n; i++) ans += (i - l[i]) * (r[i] - i);
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def uniqueLetterString(self, s: str) -> int:
+        n = len(s)
+        l, r = [-1] * n, [n] * n
+        idx = [-1] * 26
+        for i in range(n):
+            u = ord(s[i]) - ord('A')
+            l[i] = idx[u]
+            idx[u] = i
+        idx = [n] * 26
+        for i in range(n - 1, -1, -1):
+            u = ord(s[i]) - ord('A')
+            r[i] = idx[u]
+            idx[u] = i
+        return sum((i - l[i]) * (r[i] - i) for i in range(n))
+```
 Typescript 代码：
 ```Typescript
 function uniqueLetterString(s: string): number {
@@ -125,7 +169,7 @@ function uniqueLetterString(s: string): number {
 
 综上，我们有状态转移方程：$f[i] = f[i - 1] + (i - b[s[i]]) - (b[s[i]] - a[s[i]])$
 
-实现上，由于 $f[i]$ 只依赖于 $f[i - 1]$，因此我们真的无须创建动规数组，而只需要使用单个变量 `cur` 来记录当前处理到的 $f[i]$ 即可，累积所有的 $f[i]$ 即是答案。
+实现上，由于 $f[i]$ 只依赖于 $f[i - 1]$，因此我们无须真的创建动规数组，而只需要使用单个变量 `cur` 来记录当前处理到的 $f[i]$ 即可，累积所有的 $f[i]$ 即是答案。
 
 Java 代码：
 ```Java
@@ -143,6 +187,36 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int uniqueLetterString(string s) {
+        int n = s.length(), ans = 0, cur = 0;
+        vector<int> a(26, -1), b(26, -1);
+        for (int i = 0; i < n; ++i) {
+            int u = s[i] - 'A';
+            cur += i - b[u] - (b[u] - a[u]);
+            ans += cur;
+            a[u] = b[u]; b[u] = i;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def uniqueLetterString(self, s: str) -> int:
+        n, ans, cur = len(s), 0, 0
+        a, b = [-1] * 26, [-1] * 26
+        for i in range(n):
+            u = ord(s[i]) - ord('A')
+            cur += i - b[u] - (b[u] - a[u])
+            ans += cur
+            a[u], b[u] = b[u], i
+        return ans
 ```
 TypeScript 代码：
 ```TypeScript
