--- a/LeetCode/861-870/862. 和至少为 K 的最短子数组（困难）.md
+++ b/LeetCode/861-870/862. 和至少为 K 的最短子数组（困难）.md
@@ -1,14 +1,14 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[863. 二叉树中所有距离为 K 的结点](https://leetcode.cn/problems/shortest-subarray-with-sum-at-least-k/solution/by-ac_oier-es0s/)** ，难度为 **困难**。
+这是 LeetCode 上的 **[862. 和至少为 K 的最短子数组](https://leetcode.cn/problems/shortest-subarray-with-sum-at-least-k/solution/by-ac_oier-es0s/)** ，难度为 **困难**。
 
 Tag : 「前缀和」、「离散化」、「二分」、「树状数组」
 
 
 
-给你一个整数数组 `nums` 和一个整数 `k` ，找出 `nums` 中和至少为 `k` 的 最短非空子数组 ，并返回该子数组的长度。如果不存在这样的 子数组 ，返回 `-1` 。
+给你一个整数数组 `nums` 和一个整数 `k` ，找出 `nums` 中和至少为 `k` 的 最短非空子数组 ，并返回该子数组的长度。如果不存在这样的子数组，返回 `-1` 。
 
-子数组 是数组中 连续 的一部分。
+子数组是数组中连续 的一部分。
 
 示例 1：
 ```
@@ -46,7 +46,7 @@ Tag : 「前缀和」、「离散化」、「二分」、「树状数组」
 
 随后来考虑如何求解「满足条件的最大下标」问题，可以通过「权值树状数组」来做：对于每个 $sum[i]$ 而言，我们利用「权值树状数组」来维护满足大于等于 $sum[i] + k$ 的最大下标。起始我们先初始化树状数组为 $-1$，遍历过程中，查询是否存在满足条件的下标（若不为 `-1` 则更新 `ans`），并更新权值树状数组对应的最大下标即可。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     static int N = 200010;
@@ -94,6 +94,48 @@ class Solution {
         return ans == n + 10 ? -1 : ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    static const int N = 200010;
+    vector<int> tr, sum;
+    int n, m, ans;
+    int lowbit(int x) {
+        return x & -x;
+    }
+    void update(int val, int loc) {
+        for (int i = val; i < m; i += lowbit(i)) tr[i] = max(tr[i], loc);
+    }
+    int query(int x) {
+        int ans = -1;
+        for (int i = x; i > 0; i -= lowbit(i)) ans = max(ans, tr[i]);
+        return ans;
+    }
+    int shortestSubarray(vector<int>& nums, int k) {
+        n = nums.size(); m = 2 * n + 10; ans = n + 10;
+        tr.resize(m, -1); sum.resize(m + 10, 0);
+        vector<long long> temp(m);
+        vector<long long> list;
+        for (int i = 1; i <= 2 * n + 1; i++) {
+            if (i <= n) temp[i] = temp[i - 1] + nums[i - 1];
+            else temp[i] = temp[i - (n + 1)] + k;
+            list.push_back(temp[i]);
+        }
+        sort(list.begin(), list.end());
+        for (int i = 0; i <= 2 * n + 1; i++) {
+            sum[i] = lower_bound(list.begin(), list.end(), temp[i]) - list.begin() + 1;
+        }
+        update(sum[n + 1], 0);
+        for (int i = 1; i <= n; i++) {
+            int j = query(sum[i]);
+            if (j != -1) ans = min(ans, i - j);
+            update(sum[n + 1 + i], i);
+        }
+        return ans == n + 10 ? -1 : ans;
+    }
+};
 ```
 * 时间复杂度：预处理前缀和的的复杂度为 $O(n)$，排序并进行离散化的复杂度为 $O(n\log{n})$；构造答案的复杂度为 $O(n\log{n})$。整体复杂度为 $O(n\log{n})$
 * 空间复杂度：$O(n)$
