--- a/LeetCode/871-880/878. 第 N 个神奇数字（困难）.md
+++ b/LeetCode/871-880/878. 第 N 个神奇数字（困难）.md
@@ -98,24 +98,28 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function nthMagicalNumber(n: number, a: number, b: number): number {
-    function gcd(a: number, b: number): number {
-        return b == 0 ? a : gcd(b, a % b)
+C++ 代码：
+```C++
+class Solution {
+public:
+    int n, a, b, c;
+    int gcd(int a, int b) {
+        return b == 0 ? a : gcd(b, a % b);
     }
-    function check(x: number): number {
-        return Math.floor(x / a) + Math.floor(x / b) - Math.floor(x / c)
+    long check(long x) {
+        return x / a + x / b - x / c;
     }
-    const c = Math.floor(a * b / gcd(a, b))
-    let l = 0, r = 1e18
-    while (l < r) {
-        const mid = Math.floor((l + r) / 2)
-        if (check(mid) >= n) r = mid
-        else l = mid + 1
+    int nthMagicalNumber(int _n, int _a, int _b) {
+        n = _n; a = _a; b = _b; c = a * b / gcd(a, b);
+        long l = 0, r = 1e18;
+        while (l < r) {
+            long mid = l + r >> 1;
+            if (check(mid) >= n) r = mid;
+            else l = mid + 1;
+        }
+        return (int)(r % 1000000007);
     }
-    return r % 1000000007
-}
+};
 ```
 Python3 代码：
 ```Python
@@ -134,6 +138,25 @@ class Solution:
             else:
                 l = mid + 1
         return int(r % 1000000007)
+```
+TypeScript 代码：
+```TypeScript
+function nthMagicalNumber(n: number, a: number, b: number): number {
+    function gcd(a: number, b: number): number {
+        return b == 0 ? a : gcd(b, a % b)
+    }
+    function check(x: number): number {
+        return Math.floor(x / a) + Math.floor(x / b) - Math.floor(x / c)
+    }
+    const c = Math.floor(a * b / gcd(a, b))
+    let l = 0, r = 1e18
+    while (l < r) {
+        const mid = Math.floor((l + r) / 2)
+        if (check(mid) >= n) r = mid
+        else l = mid + 1
+    }
+    return r % 1000000007
+}
 ```
 * 时间复杂度：$O(\log{N})$，其中 $N = 1e18$ 为值域大小
 * 空间复杂度：$O(1)$
