--- a/LeetCode/881-890/886. 可能的二分法（中等）.md
+++ b/LeetCode/881-890/886. 可能的二分法（中等）.md
@@ -6,9 +6,13 @@ Tag : 「二分图」、「染色法」、「并查集」、「DFS」
 
 
 
-给定一组 `n` 人（编号为 `1, 2, ..., n`）， 我们想把每个人分进任意大小的两组。每个人都可能不喜欢其他人，那么他们不应该属于同一组。
+给定一组 `n` 人（编号为 `1, 2, ..., n`）， 我们想把每个人分进任意大小的两组。
 
-给定整数 `n` 和数组 `dislikes` ，其中 $dislikes[i] = [a_i, b_i]$ ，表示不允许将编号为 $a_i$ 和  $b_i$ 的人归入同一组。当可以用这种方法将所有人分进两组时，返回 `true`；否则返回 `false`。
+每个人都可能不喜欢其他人，那么他们不应该属于同一组。
+
+给定整数 `n` 和数组 `dislikes` ，其中 $dislikes[i] = [a_i, b_i]$ ，表示不允许将编号为 $a_i$ 和  $b_i$ 的人归入同一组。
+
+当可以用这种方法将所有人分进两组时，返回 `true`；否则返回 `false`。
 
 示例 1：
 ```
@@ -93,36 +97,38 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function possibleBipartition(n: number, ds: number[][]): boolean {
-    const N = 2010, M = 2 * 10010
-    const he = new Array<number>(N).fill(-1), e = new Array<number>(M).fill(0), ne = new Array<number>(M).fill(0), color = new Array<number>(N).fill(0)
-    let idx = 0
-    function add(a: number, b: number): void {
-        e[idx] = b
-        ne[idx] = he[a]
-        he[a] = idx++
+C++ 代码：
+```C++
+class Solution {
+public:
+    int he[2010], e[2 * 10010], ne[2 * 10010], color[2010], idx = 0;
+    void add(int a, int b) {
+        e[idx] = b;
+        ne[idx] = he[a];
+        he[a] = idx++;
     }
-    function dfs(u: number, cur: number): boolean {
-        color[u] = cur
-        for (let i = he[u]; i != -1; i = ne[i]) {
-            const j = e[i];
-            if (color[j] == cur) return false
-            if (color[j] == 0 && !dfs(j, 3 - cur)) return false
+    bool dfs(int u, int cur) {
+        color[u] = cur;
+        for (int i = he[u]; i != -1; i = ne[i]) {
+            int j = e[i];
+            if (color[j] == cur) return false;
+            if (color[j] == 0 && !dfs(j, 3 - cur)) return false;
         }
-        return true
+        return true;
     }
-    for (const info of ds) {
-        const a = info[0], b = info[1]
-        add(a, b); add(b, a)
+    bool possibleBipartition(int n, vector<vector<int>>& ds) {
+        fill(he, he + n + 10, -1);
+        for (const auto& info : ds) {
+            int a = info[0], b = info[1];
+            add(a, b); add(b, a);
+        }
+        for (int i = 1; i <= n; i++) {
+            if (color[i] != 0) continue;
+            if (!dfs(i, 1)) return false;
+        }
+        return true;
     }
-    for (let i = 1; i <= n; i++) {
-        if (color[i] != 0) continue
-        if (!dfs(i, 1)) return false
-    }
-    return true
-}
+};
 ```
 Python 代码：
 ```Python
@@ -156,6 +162,37 @@ class Solution:
             if not dfs(i, 1):
                 return False
         return True
+```
+TypeScript 代码：
+```TypeScript
+function possibleBipartition(n: number, ds: number[][]): boolean {
+    const N = 2010, M = 2 * 10010
+    const he = new Array<number>(N).fill(-1), e = new Array<number>(M).fill(0), ne = new Array<number>(M).fill(0), color = new Array<number>(N).fill(0)
+    let idx = 0
+    function add(a: number, b: number): void {
+        e[idx] = b
+        ne[idx] = he[a]
+        he[a] = idx++
+    }
+    function dfs(u: number, cur: number): boolean {
+        color[u] = cur
+        for (let i = he[u]; i != -1; i = ne[i]) {
+            const j = e[i];
+            if (color[j] == cur) return false
+            if (color[j] == 0 && !dfs(j, 3 - cur)) return false
+        }
+        return true
+    }
+    for (const info of ds) {
+        const a = info[0], b = info[1]
+        add(a, b); add(b, a)
+    }
+    for (let i = 1; i <= n; i++) {
+        if (color[i] != 0) continue
+        if (!dfs(i, 1)) return false
+    }
+    return true
+}
 ```
 * 时间复杂度：$O(n + m)$
 * 空间复杂度：$O(n + m)$
@@ -195,28 +232,33 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function possibleBipartition(n: number, ds: number[][]): boolean {
-    const p = new Array<number>(4010).fill(0)
-    function find(x: number): number {
-        if (p[x] != x) p[x] = find(p[x])
-        return p[x]
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<int> p;
+    int find(int x) {
+        if (p[x] != x) p[x] = find(p[x]);
+        return p[x];
     }
-    function union(a: number, b: number): void {
-        p[find(a)] = p[find(b)]
+    void unionp(int a, int b) {
+        p[find(a)] = p[find(b)];
     }
-    function query(a: number, b: number): boolean {
-        return find(a) == find(b)
+    bool query(int a, int b) {
+        return find(a) == find(b);
     }
-    for (let i = 1; i <= 2 * n; i++) p[i] = i
-    for (const info of ds) {
-        const a = info[0], b = info[1]
-        if (query(a, b)) return false
-        union(a, b + n); union(b, a + n)
+    bool possibleBipartition(int n, vector<vector<int>>& ds) {
+        p.resize(2 * n + 1);
+        for (int i = 1; i <= 2 * n; ++i) p[i] = i;
+        for (const auto& info : ds) {
+            int a = info[0], b = info[1];
+            if (query(a, b)) return false;
+            unionp(a, b + n);
+            unionp(b, a + n);
+        }
+        return true;
     }
-    return true
-}
+};
 ```
 Python 代码：
 ```Python
@@ -239,6 +281,29 @@ class Solution:
                 union(a, b + n)
                 union(b, a + n)
         return True
+```
+TypeScript 代码：
+```TypeScript
+function possibleBipartition(n: number, ds: number[][]): boolean {
+    const p = new Array<number>(4010).fill(0)
+    function find(x: number): number {
+        if (p[x] != x) p[x] = find(p[x])
+        return p[x]
+    }
+    function union(a: number, b: number): void {
+        p[find(a)] = p[find(b)]
+    }
+    function query(a: number, b: number): boolean {
+        return find(a) == find(b)
+    }
+    for (let i = 1; i <= 2 * n; i++) p[i] = i
+    for (const info of ds) {
+        const a = info[0], b = info[1]
+        if (query(a, b)) return false
+        union(a, b + n); union(b, a + n)
+    }
+    return true
+}
 ```
 * 时间复杂度：$O(n + m)$
 * 空间复杂度：$O(n)$
