--- a/LeetCode/901-910/907. 子数组的最小值之和（中等）.md
+++ b/LeetCode/901-910/907. 子数组的最小值之和（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[908. 最小差值 I](https://leetcode.cn/problems/sum-of-subarray-minimums/solution/by-ac_oier-w2ya/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[907. 子数组的最小值之和](https://leetcode.cn/problems/sum-of-subarray-minimums/solution/by-ac_oier-w2ya/)** ，难度为 **中等**。
 
 Tag : 「数学」、「单调栈」
 
@@ -130,6 +130,27 @@ public:
     }
 };
 ```
+Python 代码：
+```Python
+class Solution:
+    def sumSubarrayMins(self, arr: List[int]) -> int:
+        n, ans = len(arr), 0
+        l, r = [-1] * n, [n] * n
+        stk = []
+        for i in range(n):
+            while stk and arr[stk[-1]] >= arr[i]:
+                r[stk.pop()] = i
+            stk.append(i)
+        stk = []
+        for i in range(n - 1, -1, -1):
+            while stk and arr[stk[-1]] > arr[i]:
+                l[stk.pop()] = i
+            stk.append(i)
+        for i in range(n):
+            a, b = i - l[i], r[i] - i
+            ans += a * b * arr[i]
+        return ans % (10 ** 9 + 7)
+```
 TypeScript 代码：
 ```TypeScript
 const MOD = 1000000007
@@ -154,27 +175,6 @@ function sumSubarrayMins(arr: number[]): number {
     }
     return ans
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def sumSubarrayMins(self, arr: List[int]) -> int:
-        n, ans = len(arr), 0
-        l, r = [-1] * n, [n] * n
-        stk = []
-        for i in range(n):
-            while stk and arr[stk[-1]] >= arr[i]:
-                r[stk.pop()] = i
-            stk.append(i)
-        stk = []
-        for i in range(n - 1, -1, -1):
-            while stk and arr[stk[-1]] > arr[i]:
-                l[stk.pop()] = i
-            stk.append(i)
-        for i in range(n):
-            a, b = i - l[i], r[i] - i
-            ans += a * b * arr[i]
-        return ans % (10 ** 9 + 7)
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
@@ -230,6 +230,22 @@ public:
     }
 };
 ```
+Python 代码：
+```Python
+class Solution:
+    def sumSubarrayMins(self, arr: List[int]) -> int:
+        n, ans = len(arr), 0
+        stk = []
+        for r in range(n + 1):
+            t = arr[r] if r < n else 0
+            while stk and arr[stk[-1]] >= t:
+                cur = stk.pop()
+                l = stk[-1] if stk else -1
+                a, b = cur - l, r - cur
+                ans += a * b * arr[cur]
+            stk.append(r)
+        return ans % (10 ** 9 + 7)
+```
 TypeScript 代码：
 ```TypeScript
 const MOD = 1000000007
@@ -250,22 +266,6 @@ function sumSubarrayMins(arr: number[]): number {
     }
     return ans
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def sumSubarrayMins(self, arr: List[int]) -> int:
-        n, ans = len(arr), 0
-        stk = []
-        for r in range(n + 1):
-            t = arr[r] if r < n else 0
-            while stk and arr[stk[-1]] >= t:
-                cur = stk.pop()
-                l = stk[-1] if stk else -1
-                a, b = cur - l, r - cur
-                ans += a * b * arr[cur]
-            stk.append(r)
-        return ans % (10 ** 9 + 7)
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
