--- a/LeetCode/931-940/940. 不同的子序列 II（困难）.md
+++ b/LeetCode/931-940/940. 不同的子序列 II（困难）.md
@@ -6,7 +6,9 @@ Tag : 「序列 DP」、「动态规划」
 
 
 
-给定一个字符串 `s`，计算 `s` 的 不同非空子序列 的个数。因为结果可能很大，所以返回答案需要对 $10^9 + 7$ 取余 。
+给定一个字符串 `s`，计算 `s` 的 不同非空子序列 的个数。
+
+因为结果可能很大，所以返回答案需要对 $10^9 + 7$ 取余 。
 
 字符串的 子序列 是经由原字符串删除一些（也可能不删除）字符但不改变剩余字符相对位置的一个新字符串。
 
@@ -88,6 +90,43 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int distinctSubseqII(string s) {
+        int n = s.length(), MOD = 1e9 + 7;
+        vector<vector<int>> f(n + 1, vector<int>(26, 0));
+        for (int i = 1; i <= n; ++i) {
+            int c = s[i - 1] - 'a';
+            for (int j = 0; j < 26; ++j) {
+                if (c != j) {
+                    f[i][j] = f[i - 1][j];
+                } else {
+                    int cur = 1;
+                    for (int k = 0; k < 26; ++k) cur = (cur + f[i - 1][k]) % MOD;
+                    f[i][j] = cur;
+                }
+            }
+        }
+        int ans = 0;
+        for (int i = 0; i < 26; ++i) ans = (ans + f[n][i]) % MOD;
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def distinctSubseqII(self, s: str) -> int:
+        n, MOD = len(s), 1e9+7
+        f = [[0] * 26 for _ in range(n + 1)]
+        for i in range(1, n + 1):
+            c = ord(s[i - 1]) - ord('a')
+            for j in range(26):
+                f[i][j] = f[i - 1][j] if c != j else (1 + sum(f[i - 1])) % MOD
+        return int(sum(f[n]) % MOD)
+```
 TypeScript 代码：
 ```TypeScript
 function distinctSubseqII(s: string): number {
@@ -110,18 +149,6 @@ function distinctSubseqII(s: string): number {
     for (let i = 0; i < 26; i++) ans = (ans + f[n][i]) % MOD
     return ans
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def distinctSubseqII(self, s: str) -> int:
-        n, MOD = len(s), 1e9+7
-        f = [[0] * 26 for _ in range(n + 1)]
-        for i in range(1, n + 1):
-            c = ord(s[i - 1]) - ord('a')
-            for j in range(26):
-                f[i][j] = f[i - 1][j] if c != j else (1 + sum(f[i - 1])) % MOD
-        return int(sum(f[n]) % MOD)
 ```
 * 时间复杂度：$O(n \times C^2)$，其中 $C = 26$ 为字符集大小
 * 空间复杂度：$O(n \times C)$
@@ -151,6 +178,36 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int distinctSubseqII(string s) {
+        int n = s.length(), ans = 0, MOD = 1e9 + 7;
+        vector<int> f(26, 0);
+        for (int i = 0; i < n; ++i) {
+            int c = s[i] - 'a', prev = f[c];
+            f[c] = (ans + 1) % MOD;
+            ans = (ans + f[c]) % MOD;
+            ans = (ans - prev + MOD) % MOD;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def distinctSubseqII(self, s: str) -> int:
+        n, MOD, ans = len(s), 1e9+7, 0
+        f = [0] * 26
+        for i in range(n):
+            c = ord(s[i]) - ord('a')
+            prev = f[c]
+            f[c] = (ans + 1) % MOD
+            ans = (ans + f[c] - prev) % MOD            
+        return int(ans)
+```
 TypeScript 代码：
 ```TypeScript
 function distinctSubseqII(s: string): number {
@@ -165,19 +222,6 @@ function distinctSubseqII(s: string): number {
     }
     return ans
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def distinctSubseqII(self, s: str) -> int:
-        n, MOD, ans = len(s), 1e9+7, 0
-        f = [0] * 26
-        for i in range(n):
-            c = ord(s[i]) - ord('a')
-            prev = f[c]
-            f[c] = (ans + 1) % MOD
-            ans = (ans + f[c] - prev) % MOD            
-        return int(ans)
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(C)$
