--- a/LeetCode/801-810/801. 使序列递增的最小交换次数（困难）.md
+++ b/LeetCode/801-810/801. 使序列递增的最小交换次数（困难）.md
@@ -41,7 +41,7 @@ A = [1, 3, 5, 7] ， B = [1, 2, 3, 4]
 提示:
 * $2 <= nums1.length <= 10^5$
 * $nums2.length = nums1.length$
-* $0 <= nums1[i], nums2[i] <= 2 * 10^5$
+* $0 <= nums1[i], nums2[i] <= 2 \times 10^5$
 
 ---
 
@@ -65,17 +65,21 @@ A = [1, 3, 5, 7] ， B = [1, 2, 3, 4]
 
 * 若 $nums1[i] > nums1[i - 1]$ 且 $nums2[i] > nums2[i - 1]$（即顺序位满足要求），此时要么当前位置 $i$ 和前一位置 $i - 1$ 都不交换，要么同时发生交换，此时有（分别对应两个位置「都不交换」和「都交换」）：
 
-$$ \begin{cases}
+$$
+\begin{cases}
 f[i][0] = f[i - 1][0] \\
 f[i][1] = f[i - 1][1] + 1
-\end{cases}$$
+\end{cases}
+$$
 
 * 若 $nums1[i] > nums2[i - 1]$ 且 $nums2[i] > nums1[i - 1]$（即交叉位满足要求），此时当前位置 $i$ 和前一位置 $i - 1$ 只能有其一发生交换，此时有（分别对应「前一位置交换」和「当前位置交换」）：
 
-$$ \begin{cases}
+$$
+\begin{cases}
 f[i][0] = \min(f[i][0], f[i - 1][1]); \\
 f[i][1] = \min(f[i][1], f[i - 1][0] + 1)
-\end{cases}$$
+\end{cases}
+$$
 
 Java 代码：
 ```Java
@@ -99,6 +103,44 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minSwap(vector<int>& nums1, vector<int>& nums2) {
+        int n = nums1.size();
+        vector<vector<int>> f(n, vector<int>(2, n + 10));
+        f[0][0] = 0; f[0][1] = 1;
+        for (int i = 1; i < n; ++i) {
+            if (nums1[i] > nums1[i - 1] && nums2[i] > nums2[i - 1]) {
+                f[i][0] = f[i - 1][0];
+                f[i][1] = f[i - 1][1] + 1;
+            }
+            if (nums1[i] > nums2[i - 1] && nums2[i] > nums1[i - 1]) {
+                f[i][0] = min(f[i][0], f[i - 1][1]);
+                f[i][1] = min(f[i][1], f[i - 1][0] + 1);
+            }
+        }
+        return min(f[n - 1][0], f[n - 1][1]);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minSwap(self, nums1: List[int], nums2: List[int]) -> int:
+        n = len(nums1)
+        f = [[0, 0] for _ in range(n)]
+        for i in range(1, n):
+            f[i][0] = f[i][1] = n + 10
+        f[0][1] = 1
+        for i in range(1, n):
+            if nums1[i] > nums1[i - 1] and nums2[i] > nums2[i - 1]:
+                f[i][0], f[i][1] = f[i - 1][0], f[i - 1][1] + 1
+            if nums1[i] > nums2[i - 1] and nums2[i] > nums1[i - 1]:
+                f[i][0], f[i][1] = min(f[i][0], f[i - 1][1]), min(f[i][1], f[i - 1][0] + 1)
+        return min(f[n - 1][0], f[n - 1][1])
+```
 TypeScript 代码：
 ```TypeScript
 function minSwap(nums1: number[], nums2: number[]): number {
@@ -118,22 +160,6 @@ function minSwap(nums1: number[], nums2: number[]): number {
     }
     return Math.min(f[n - 1][0], f[n - 1][1])
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def minSwap(self, nums1: List[int], nums2: List[int]) -> int:
-        n = len(nums1)
-        f = [[0, 0] for _ in range(n)]
-        for i in range(1, n):
-            f[i][0] = f[i][1] = n + 10
-        f[0][1] = 1
-        for i in range(1, n):
-            if nums1[i] > nums1[i - 1] and nums2[i] > nums2[i - 1]:
-                f[i][0], f[i][1] = f[i - 1][0], f[i - 1][1] + 1
-            if nums1[i] > nums2[i - 1] and nums2[i] > nums1[i - 1]:
-                f[i][0], f[i][1] = min(f[i][0], f[i - 1][1]), min(f[i][1], f[i - 1][0] + 1)
-        return min(f[n - 1][0], f[n - 1][1])
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
@@ -168,6 +194,48 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minSwap(vector<int>& nums1, vector<int>& nums2) {
+        int n = nums1.size();
+        vector<vector<int>> f(2, vector<int>(2, 0));
+        f[0][1] = 1;
+        for (int i = 1; i < n; ++i) {
+            int a = n + 10, b = n + 10;
+            int prev = (i - 1) & 1, cur = i & 1;
+            if (nums1[i] > nums1[i - 1] && nums2[i] > nums2[i - 1]) {
+                a = f[prev][0];
+                b = f[prev][1] + 1;
+            }
+            if (nums1[i] > nums2[i - 1] && nums2[i] > nums1[i - 1]) {
+                a = min(a, f[prev][1]);
+                b = min(b, f[prev][0] + 1);
+            }
+            f[cur][0] = a;
+            f[cur][1] = b;
+        }
+        return min(f[(n - 1) & 1][0], f[(n - 1) & 1][1]);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minSwap(self, nums1: List[int], nums2: List[int]) -> int:
+        n = len(nums1)
+        f = [[0, 1], [0, 0]]
+        for i in range(1, n):
+            a, b = n + 10, n + 10
+            prev, cur = (i - 1) & 1, i & 1
+            if nums1[i] > nums1[i - 1] and nums2[i] > nums2[i - 1]:
+                a, b = f[prev][0], f[prev][1] + 1
+            if nums1[i] > nums2[i - 1] and nums2[i] > nums1[i - 1]:
+                a, b = min(a, f[prev][1]), min(b, f[prev][0] + 1)
+            f[cur][0], f[cur][1] = a, b
+        return min(f[(n - 1) & 1][0], f[(n - 1) & 1][1])
+```
 TypeScript 代码：
 ```TypeScript
 function minSwap(nums1: number[], nums2: number[]): number {
@@ -189,22 +257,6 @@ function minSwap(nums1: number[], nums2: number[]): number {
     }
     return Math.min(f[(n - 1) & 1][0], f[(n - 1) & 1][1])
 }
-```
-Python 代码：
-```Python
-class Solution:
-    def minSwap(self, nums1: List[int], nums2: List[int]) -> int:
-        n = len(nums1)
-        f = [[0, 1], [0, 0]]
-        for i in range(1, n):
-            a, b = n + 10, n + 10
-            prev, cur = (i - 1) & 1, i & 1
-            if nums1[i] > nums1[i - 1] and nums2[i] > nums2[i - 1]:
-                a, b = f[prev][0], f[prev][1] + 1
-            if nums1[i] > nums2[i - 1] and nums2[i] > nums1[i - 1]:
-                a, b = min(a, f[prev][1]), min(b, f[prev][0] + 1)
-            f[cur][0], f[cur][1] = a, b
-        return min(f[(n - 1) & 1][0], f[(n - 1) & 1][1])
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
