--- a/LeetCode/991-1000/998. 最大二叉树 II（中等）.md
+++ b/LeetCode/991-1000/998. 最大二叉树 II（中等）.md
@@ -6,11 +6,11 @@ Tag : 「迭代」、「模拟」
 
 
 
-最大树 定义：一棵树，并满足：其中每个节点的值都大于其子树中的任何其他值。
+最大树定义：一棵树，并满足「其中每个节点的值都大于其子树中的任何其他值」。
 
 给你最大树的根节点 `root` 和一个整数 `val` 。
 
-就像 之前的问题 那样，给定的树是利用 `Construct(a)` 例程从列表 `a`（`root = Construct(a)`）递归地构建的：
+给定的树是利用 `Construct(a)` 例程从列表 `a`（`root = Construct(a)`）递归地构建的：
 
 * 如果 `a` 为空，返回 `null` 。
 * 否则，令 `a[i]` 作为 `a` 的最大元素。创建一个值为 `a[i]` 的根节点 `root` 。
@@ -91,6 +91,45 @@ class Solution {
         }
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    TreeNode* insertIntoMaxTree(TreeNode* root, int val) {
+        TreeNode* node = new TreeNode(val);
+        TreeNode* prev = nullptr;
+        TreeNode* cur = root;
+        while (cur != nullptr && cur->val > val) {
+            prev = cur; cur = cur->right;
+        }
+        if (prev == nullptr) {
+            node->left = cur;
+            return node;
+        } else {
+            prev->right = node;
+            node->left = cur;
+            return root;
+        }
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def insertIntoMaxTree(self, root: Optional[TreeNode], val: int) -> Optional[TreeNode]:
+        node = TreeNode(val)
+        prev, cur = None, root
+        while cur is not None and cur.val > val:
+            prev = cur
+            cur = cur.right
+        if prev is None:
+            node.left = cur
+            return node
+        else:
+            prev.right = node
+            node.left = cur
+            return root
 ```
 Typescript 代码：
 ```Typescript
